--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.example.bingoetagelta"
+        applicationId "com.example.bingoetage"
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
