--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bingoetagelta">
+    package="com.example.bingoetage">
 
     <application
         android:allowBackup="true"
@@ -8,18 +8,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BingoEtageLTA"
-        android:name="App">
+        android:theme="@style/Theme.BingoEtage"
+        android:name="com.example.bingoetage.App">
         <activity
-            android:name=".SettingsActivity"
+            android:name="com.example.bingoetage.SettingsActivity"
             android:label="@string/settings_toolbar_title"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName="com.example.bingoetage.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="com.example.bingoetage.MainActivity" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.bingoetage.MainActivity"
             android:launchMode="singleTop"
             android:label="@string/main_toolbar_title"
             android:configChanges="orientation"
