--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,9 @@ plugins {
     id "dagger.hilt.android.plugin"
 }
 
+apply plugin: 'com.android.application'
+apply plugin: 'dagger.hilt.android.plugin'
+
 android {
     compileSdkVersion 30
 
@@ -48,7 +51,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    def fragment_version = "1.3.4"
+    def fragment_version = "1.3.5"
 
     // Kotlin
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
@@ -64,12 +67,12 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation("com.google.dagger:hilt-android:$hilt_version")
-    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
-    kapt("androidx.hilt:hilt-compiler:1.0.0")
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Room dependencies
-    def room_version = "2.4.0-alpha02"
+    def room_version = "2.4.0-alpha03"
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
@@ -81,4 +84,8 @@ dependencies {
     // calendarView
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
     implementation 'com.github.kizitonwose:CalendarView:1.0.4'
+}
+
+kapt {
+    correctErrorTypes true
 }
