--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
             }
         }
     }
+    buildFeatures {
+        viewBinding = true
+    }
 
     buildTypes {
         release {
