--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,8 @@ dependencies {
 
     // Stat fragment
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
 
 kapt {
