--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 .cxx
 local.properties
 /app/schemas/com.example.bingoetage.viewmodel.BingoGridDatabase/1.json
+/app/schemas/com.example.bingoetage.viewmodel.BingoGridDatabase/2.json
+/app/schemas/com.example.bingoetage.viewmodel.BingoGridDatabase/3.json
