--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BingoEtage"
-        android:name="com.example.bingoetage.App">
+        android:name="com.example.bingoetage.App"
+        android:screenOrientation="portrait">
         <activity
             android:name="com.example.bingoetage.SettingsActivity"
             android:label="@string/settings_toolbar_title"
@@ -22,8 +23,7 @@
             android:name="com.example.bingoetage.MainActivity"
             android:launchMode="singleTop"
             android:label="@string/main_toolbar_title"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
