--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        archivesBaseName = "bingo_etage-v$versionName"
         // Required when setting minSdkVersion to 20 or lower
         multiDexEnabled = true
 
