removing appupdater dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,8 +93,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     // Updater
-    implementation 'com.github.javiersantos:AppUpdater:2.7'
-    implementation("com.android.volley:volley:1.2.1")
+    implementation "com.android.volley:volley:1.2.1"
 }
 
 kapt {
